--- a/views/layout.haml
+++ b/views/layout.haml
@@ -9,5 +9,6 @@
   %body
     #content
       %h1.title
-        %a{:href=>"/"}== Sinatter
+        %a{:href=>"/"}
+          %img{:id=>"logo", :src=>"/images/sinatter.png"}
       != yield
