--- a/views/layout.haml
+++ b/views/layout.haml
@@ -6,6 +6,7 @@
     %title Sinatter : What are you doing?
     %meta{:"http-equiv"=>"Content-Type", :content=>"text/html", :charset=>"utf-8"}
     %link{:rel=>"stylesheet", :type=>"text/css", :href=>"/style.css"}
+    %script{:type=>"text/javascript", :src=>"/js/jquery-latest.js"}
   %body
     #content
       %h1.title
